# fsin_parser

./: CMakeLists.txt  FSIN.pro  README.md  declaratorcookiejar.cpp  excelcell.h  excelhandler.h  fsin_2016.xlsx  person.h  transport.cpp  transport.h  webpagehandler.cpp  webpagehandler.h
data/: fsin_2015.xlsx
old_parser/: declaratorcookiejar.h  excelcell.cpp  excelhandler.cpp  main.cpp  realty.cpp  realty.h
source/: CMakeLists.txt  Qt5.natvis  excel_adapter.cpp  excel_adapter.h  main.cpp  organization.cpp  organization.h  parser.cpp  parser.h  person.cpp  realty.cpp  realty.h
